# SpeCollate

./: README.md  pypi_readme.md  pyproject.toml  run_sample_search.py
specollate/: __init__.py  config.ini  run_search.py  run_train.py  search.py  test_train_split.py
specollate/src/snapconfig/: __init__.py
specollate/src/snapsearch/: dbsearch.py  pepdataset.py  postprocess.py  preprocess.py  specdataset.py
specollate/src/snaptrain/: dataset.py  model.py  process.py  sampler.py  trainmodel.py
specollate/src/snaputils/: preprocess.py  reader.py  simulatespectra.py
