[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "specollate"
version = "1.1.1"
description = "Spectra collation and search utilities (SpeCollate)"
readme = "pypi_readme.md"
requires-python = ">=3.8"
license = {file = "license"}
authors = [
    {name = "SaeedLab"},
]
keywords = ["proteomics", "spectra", "collation", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "torch>=1.10.0",
    "numpy>=1.19.0",
    "pandas>=1.3.0",
    "scikit-learn>=0.24.0",
    "tqdm>=4.62.0",
    "huggingface-hub>=0.19.0",
    "progressbar2>=3.53.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black>=21.0", "flake8>=3.9"]

[project.urls]
Homepage = "https://github.com/pcdslab/Specollate"
Repository = "https://github.com/pcdslab/Specollate"


[tool.setuptools.packages.find]
where = ["."]
include = ["specollate*"]
exclude = ["specollate.egg-info*", "*.tests*"]